<resources>

    <string name="tab_draw">Draw</string>
    <string name="tab_analyze">Analyze</string>

    <!--TODO: Placeholder:-->
    <string name="unknown">\?</string>

    <string name="title_side">Side</string>
    <string name="title_angle">Angle</string>

    <string name="hint_x">x</string>
    <string name="hint_y">y</string>
    <string name="hint_radius">radius</string>
    <string name="hint_theta">Ɵ</string>
    <string name="hint_minute">mm</string>
    <string name="hint_second">ss</string>
    <string name="hint_length">length</string>
    <string name="hint_area">size</string>

    <string name="label_side_bc">| BC | =</string>
    <string name="label_angle_a">/_ A =</string>
    <string name="label_side_ca">| CA | =</string>
    <string name="label_angle_b">/_ B =</string>
    <string name="label_side_ab">| AB | =</string>
    <string name="label_angle_c">/_ C =</string>

    <string name="label_unit_degree">°</string>
    <string name="label_unit_minute">\'</string>
    <string name="label_unit_second">\"</string>
    <string name="label_unit_radian">rad</string>
    <string name="label_unit_gradian">grad</string>
    <string name="label_unit_per_n">/n</string>

    <string name="label_height">Height:</string>
    <string name="label_perimeter">Perimeter =</string>
    <string name="label_area">Area =</string>

    <string name="action_coordinate">Coordinate</string>
    <string name="action_dimension">Side, Angle</string>
    <string name="action_cartesian">x, y</string>
    <string name="action_polar">r, Ɵ</string>

    <string name="action_transform">Transform</string>
    <string name="action_translate">Translate</string>
    <string name="action_rotate">Rotate</string>
    <string name="action_reflect">Reflect</string>
    <string name="action_dilate">Dilate</string>

    <string name="action_overflow">Overflow</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="translate">Translate</string>
    <string name="rotate">Rotate</string>
    <string name="reflect">Reflect</string>
    <string name="dilate">Dilate</string>

    <string name="hello_analyze_fragment">Hello Analyze Fragment</string>
    <string name="hello_draw_fragment">Hello Draw Fragment</string>
</resources>
