<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bessermt.trisolve.feature.MainActivity">

    <item
        android:id="@+id/transform"
        android:icon="@drawable/ic_transform_24dp"
        android:title="@string/action_transform"
        app:showAsAction="ifRoom|collapseActionView">

        <menu>
            <item
                android:id="@+id/action_translate"
                android:icon="@drawable/ic_translate_24dp"
                android:title="@string/action_translate"
                app:showAsAction="ifRoom|collapseActionView"/>
            <item
                android:id="@+id/action_rotate"
                android:icon="@drawable/ic_rotate_24dp"
                android:title="@string/action_rotate"
                app:showAsAction="ifRoom|collapseActionView"/>
            <item
                android:id="@+id/action_reflect"
                android:icon="@drawable/ic_reflect_24dp"
                android:title="@string/action_reflect"
                app:showAsAction="ifRoom|collapseActionView"
                app:actionProviderClass="com.bessermt.trisolve.feature.ReflectActionProvider" />
            <item
                android:id="@+id/action_dilate"
                android:icon="@drawable/ic_dilate_24dp"
                android:title="@string/action_dilate"
                app:showAsAction="ifRoom|collapseActionView"/>
        </menu>
    </item>

    <item
        android:id="@+id/coordinate"
        android:icon="@drawable/ic_coordinate_24dp"
        android:title="@string/action_coordinate"
        app:showAsAction="ifRoom|collapseActionView">

        <menu>
            <item
                android:id="@+id/action_dimension"
                android:icon="@drawable/ic_dimension_24dp"
                android:title="@string/action_dimension"
                app:showAsAction="ifRoom|collapseActionView"/>
            <item
                android:id="@+id/action_cartesian"
                android:icon="@drawable/ic_cartesian_24dp"
                android:title="@string/action_cartesian"
                app:showAsAction="ifRoom|collapseActionView"/>
            <item
                android:id="@+id/action_polar"
                android:icon="@drawable/ic_polar_24dp"
                android:title="@string/action_polar"
                app:showAsAction="ifRoom|collapseActionView"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_24dp"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>
