<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalyzeFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tl_side_angle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:stretchColumns="1,3,5,7"
            android:shrinkColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_side"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:text="@string/title_side" />

                <TextView
                    android:id="@+id/tv_title_angle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:text="@string/title_angle" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/tb_label_side_bc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/label_side_bc"
                    android:textOff="@string/label_side_bc"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:id="@+id/et_side_bc_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:hint="@string/hint_length" />

                <ToggleButton
                    android:id="@+id/tb_label_angle_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/label_angle_a"
                    android:textOff="@string/label_angle_a"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:id="@+id/et_angle_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:nextFocusDown="@id/et_angle_a_degree_minute"
                    android:hint="@string/hint_theta" />

                <TextView
                    android:id="@+id/tv_label_angle_a_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

                <EditText
                    android:id="@+id/et_angle_a_degree_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusDown="@id/et_angle_a_degree_second"
                    android:hint="@string/hint_minute"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_label_angle_a_degree_minute_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_minute"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/et_angle_a_degree_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/hint_second"
                    android:nextFocusDown="@id/et_angle_b"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_label_angle_a_degree_second_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_second"
                    android:visibility="visible" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/tb_label_side_ca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/label_side_ca"
                    android:textOff="@string/label_side_ca"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:id="@+id/et_side_ca_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:hint="@string/hint_length" />

                <ToggleButton
                    android:id="@+id/tb_label_angle_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/label_angle_b"
                    android:textOff="@string/label_angle_b"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:id="@+id/et_angle_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:nextFocusDown="@id/et_angle_b_degree_minute"
                    android:hint="@string/hint_theta" />

                <TextView
                    android:id="@+id/tv_label_angle_b_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

                <EditText
                    android:id="@+id/et_angle_b_degree_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusDown="@id/et_angle_b_degree_second"
                    android:hint="@string/hint_minute"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_label_angle_b_degree_minute_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_minute"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/et_angle_b_degree_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusDown="@id/et_angle_c"
                    android:hint="@string/hint_second"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_label_angle_b_degree_second_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_second"
                    android:visibility="visible" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/tb_label_side_ab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/label_side_ab"
                    android:textOff="@string/label_side_ab"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:id="@+id/et_side_ab_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_length" />

                <ToggleButton
                    android:id="@+id/tb_label_angle_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/label_angle_c"
                    android:textOff="@string/label_angle_c"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:id="@+id/et_angle_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:nextFocusDown="@id/et_angle_c_degree_minute"
                    android:hint="@string/hint_theta" />

                <TextView
                    android:id="@+id/tv_label_angle_c_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

                <EditText
                    android:id="@+id/et_angle_c_degree_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusDown="@id/et_angle_c_degree_second"
                    android:hint="@string/hint_minute"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_label_angle_c_degree_minute_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_minute"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/et_angle_c_degree_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    android:maxLength="2"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_second"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_label_angle_c_degree_second_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_unit_second"
                    android:visibility="visible" />

            </TableRow>

        </TableLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/fl_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tl_side_angle">

            <TextView
                android:id="@+id/tv_label_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_height" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/tb_label_height_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff="@string/label_angle_a"
                    android:textOn="@string/label_angle_a" />

                <EditText
                    android:id="@+id/et_height_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:nextFocusDown="@id/et_height_b"
                    android:hint="@string/hint_length"
                    android:inputType="number|numberDecimal|numberSigned" />

                <ToggleButton
                    android:id="@+id/tb_label_height_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff="@string/label_angle_b"
                    android:textOn="@string/label_angle_b" />

                <EditText
                    android:id="@+id/et_height_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:nextFocusDown="@id/et_height_c"
                    android:hint="@string/hint_length"
                    android:inputType="number|numberDecimal|numberSigned" />

                <ToggleButton
                    android:id="@+id/tb_label_height_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff="@string/label_angle_c"
                    android:textOn="@string/label_angle_c" />

                <EditText
                    android:id="@+id/et_height_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_length"
                    android:inputType="number|numberDecimal|numberSigned" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:id="@+id/tb_label_perimeter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff="@string/label_perimeter"
                    android:textOn="@string/label_perimeter" />

                <EditText
                    android:id="@+id/et_perimeter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_length"
                    android:inputType="number|numberDecimal|numberSigned" />

                <ToggleButton
                    android:id="@+id/tb_label_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff="@string/label_area"
                    android:textOn="@string/label_area" />

                <EditText
                    android:id="@+id/et_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_area"
                    android:inputType="number|numberDecimal|numberSigned" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
